modules/cli/src/test/resources/good/syntax/inlinedunfolding/grecursion/Test03.scr
module good.syntax.inlinedunfolding.grecursion.Test03;


global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			continue X;
		}
		or
		{
			2() from A to B;
			continue X;
		}
	}
}


